Fix spacing on small screens

--- a/styles.css
+++ b/styles.css
@@ -279,6 +279,7 @@ main {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  gap: 1rem;
 }
 
 #description p {
